Adiciona modo desenvolvedor com feedback visual, simulação de usuário e instruções de uso; atualiza navbar e estilos para suporte ao modo dev.

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
 <body>
   <!-- Navbar será injetado via JavaScript -->
   <header id="navbar-container"></header>
-  
-  <!-- Header da página inicial -->
+    <!-- Header da página inicial -->
   <section class="site-header text-center">
     <div class="container">
-      <h1 class="display-4 fw-bold mb-4">Eu Faço Você Joga!</h1>
-      <p class="lead fs-4 mb-5">A maior competição de jogos indie do Brasil</p>
+      <h1 class="display-4 fw-bold mb-4" data-text="Eu Faço Você Joga!">Eu Faço Você Joga!</h1>
+      <p class="lead fs-4 mb-5">A maior competição de jogos indie da UFU - MC</p>
       <div class="d-flex justify-content-center gap-3">
         <a href="cadastro.html" class="btn btn-light btn-lg px-4 py-2">
           <i class="fas fa-gamepad me-2"></i>Inscrever Jogo
