--- a/cadastro.html
+++ b/cadastro.html
@@ -16,12 +16,13 @@
   
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
-    <!-- Google Fonts -->
+  <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Custom CSS -->
-  <link href="src/css/navbar.css" rel="stylesheet">
   <link href="src/css/styles.css" rel="stylesheet">
+  <link href="src/css/navbar.css" rel="stylesheet">
+  <link href="src/css/footer.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar será injetado via JavaScript -->
