--- a/detalhes.html
+++ b/detalhes.html
@@ -20,8 +20,9 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Custom CSS -->
-  <link href="src/css/navbar.css" rel="stylesheet">
   <link href="src/css/styles.css" rel="stylesheet">
+  <link href="src/css/navbar.css" rel="stylesheet">
+  <link href="src/css/footer.css" rel="stylesheet">
 </head>
 <body>
   <!-- Navbar será injetado via JavaScript -->
