--- a/index.html
+++ b/index.html
@@ -1,57 +1,63 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Eu Faço Você Joga! - Competição de Jogos Indie</title>
-  
+
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="src/images/favicon/favicon.svg">
   <link rel="icon" type="image/png" sizes="96x96" href="src/images/favicon/favicon-96x96.png">
   <link rel="apple-touch-icon" href="src/images/favicon/apple-touch-icon.png">
   <link rel="manifest" href="src/images/favicon/site.webmanifest">
-  
+
   <!-- Bootstrap 5 CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+
   <!-- Font Awesome -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  
+
   <!-- Custom CSS -->
   <link href="src/css/styles.css" rel="stylesheet">
   <link href="src/css/navbar.css" rel="stylesheet">
   <link href="src/css/footer.css" rel="stylesheet">
 </head>
+
 <body>
   <!-- Navbar será injetado via JavaScript -->
   <header id="navbar-container"></header>
-    <!-- Header da página inicial -->
+  <!-- Header da página inicial -->
   <section class="site-header text-center">
     <div class="container">
       <h1 class="display-4 fw-bold mb-4" data-text="Eu Faço Você Joga!">Eu Faço Você Joga!</h1>
       <p class="lead fs-4 mb-5">A maior competição de jogos indie da UFU - MC</p>
       <div class="d-flex justify-content-center gap-3">
-        <a href="cadastro.html" class="btn btn-light btn-lg px-4 py-2">
+        <a href="register.html" class="btn btn-light btn-lg px-4 py-2">
           <i class="fas fa-gamepad me-2"></i>Inscrever Jogo
         </a>
-        <a href="jogos.html" class="btn btn-outline-light btn-lg px-4 py-2">
+        <a href="games.html" class="btn btn-outline-light btn-lg px-4 py-2">
           <i class="fas fa-play me-2"></i>Ver Jogos
         </a>
       </div>
     </div>
   </section>
-  
+
   <!-- Sobre a competição -->
   <section class="py-5">
     <div class="container">
       <div class="row">
         <div class="col-lg-6 mb-4 mb-lg-0">
           <h2 class="page-title">Sobre a Competição</h2>
-          <p class="mb-4">A <strong>"Eu Faço Você Joga!"</strong> é uma competição anual de desenvolvimento de jogos indie que visa incentivar a criatividade e inovação na indústria de games brasileira.</p>
-          <p class="mb-4">Nosso objetivo é proporcionar uma plataforma para que desenvolvedores independentes possam mostrar seus talentos, receber feedback da comunidade e conquistar reconhecimento pelo seu trabalho.</p>
-          <p class="mb-4">A competição está aberta para desenvolvedores de todos os níveis, desde iniciantes até profissionais experientes. Não importa se o seu jogo foi feito por uma pessoa só ou por uma pequena equipe - o que importa é a criatividade e a qualidade!</p>
+          <p class="mb-4">A <strong>"Eu Faço Você Joga!"</strong> é uma competição anual de desenvolvimento de jogos
+            indie que visa incentivar a criatividade e inovação na indústria de games brasileira.</p>
+          <p class="mb-4">Nosso objetivo é proporcionar uma plataforma para que desenvolvedores independentes possam
+            mostrar seus talentos, receber feedback da comunidade e conquistar reconhecimento pelo seu trabalho.</p>
+          <p class="mb-4">A competição está aberta para desenvolvedores de todos os níveis, desde iniciantes até
+            profissionais experientes. Não importa se o seu jogo foi feito por uma pessoa só ou por uma pequena equipe -
+            o que importa é a criatividade e a qualidade!</p>
         </div>
         <div class="col-lg-6">
           <div class="card border-0 shadow-sm">
@@ -59,29 +65,34 @@
               <h3 class="h4 card-title mb-4">Como Funciona</h3>
               <div class="d-flex mb-3">
                 <div class="flex-shrink-0">
-                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
+                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+                    style="width: 40px; height: 40px;">
                     <i class="fas fa-upload"></i>
                   </div>
                 </div>
                 <div class="flex-grow-1 ms-3">
                   <h4 class="h5">Cadastre seu jogo</h4>
-                  <p class="text-muted">Inscreva seu jogo na competição preenchendo o formulário com todas as informações.</p>
+                  <p class="text-muted">Inscreva seu jogo na competição preenchendo o formulário com todas as
+                    informações.</p>
                 </div>
               </div>
               <div class="d-flex mb-3">
                 <div class="flex-shrink-0">
-                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
+                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+                    style="width: 40px; height: 40px;">
                     <i class="fas fa-users"></i>
                   </div>
                 </div>
-                <div class="flex-grow-1 ms-3">                  
+                <div class="flex-grow-1 ms-3">
                   <h4 class="h5">Receba avaliações</h4>
-                  <p class="text-muted">A comunidade joga e avalia seu jogo com base em diversos critérios, como jogabilidade, design e história.</p>
+                  <p class="text-muted">A comunidade joga e avalia seu jogo com base em diversos critérios, como
+                    jogabilidade, design e história.</p>
                 </div>
               </div>
               <div class="d-flex mb-3">
                 <div class="flex-shrink-0">
-                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center" style="width: 40px; height: 40px;">
+                  <div class="bg-primary text-white rounded-circle d-flex align-items-center justify-content-center"
+                    style="width: 40px; height: 40px;">
                     <i class="fas fa-trophy"></i>
                   </div>
                 </div>
@@ -96,7 +107,7 @@
       </div>
     </div>
   </section>
-  
+
   <!-- Ranking dos jogos -->
   <section class="py-5 bg-light">
     <div class="container">
@@ -111,13 +122,13 @@
         </div>
       </div>
       <div class="text-center mt-4">
-        <a href="jogos.html" class="btn btn-primary px-4 py-2">
+        <a href="games.html" class="btn btn-primary px-4 py-2">
           <i class="fas fa-gamepad me-2"></i>Ver Todos os Jogos
         </a>
       </div>
     </div>
   </section>
-  
+
   <!-- Modal de Avaliação por Critérios -->
   <div class="modal fade" id="ratingModal" tabindex="-1" aria-labelledby="ratingModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-lg">
@@ -134,12 +145,13 @@
       </div>
     </div>
   </div>
-    <!-- Footer será injetado via JavaScript -->
+  <!-- Footer será injetado via JavaScript -->
   <div id="footer-container"></div>
   <!-- Bootstrap JS Bundle with Popper -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+
   <!-- Scripts da aplicação -->
   <script type="module" src="src/js/index.js"></script>
 </body>
+
 </html>
